src/scss/app.scss
*,
*::before,
*::after {
  box-sizing: border-box;
}

:root {
  --dark: #1C1C1C;
  --dark-pink: #BE5683;
  --light-pink: #ffe4e4;
}

html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
  font-family: "Lato", sans-serif;
  color: #000839;
  background-color: #fdfdfd;
}

main {
  display: block;
}

pre {
  font-family: monospace, monospace;
  font-size: 1em;
}

a {
  background-color: transparent;
  color: #14b1ab;
}

strong {
  font-weight: bolder;
}

code {
  font-family: monospace, monospace;
  font-size: 1em;
}

img {
  max-width: 100%;
  border-style: none;

  &.center {
    margin-left: auto;
    margin-right: auto;
    display: block;
  }
}

details {
  display: block;
  margin: 1rem;
}

summary {
  display: list-item;
  font-size: 2rem;
}

p {
  font-size: 1.25rem;
  line-height: 1.68;
}

li {
  margin-bottom: 0.4em;
  padding: 0.5rem 0;
  font-size: 1.1rem;
  line-height: 1.5;
}

.my {
  margin-top: 5rem;
  margin-bottom: 3rem;
}

h2 {
  --fz: 2.5rem;
  font-size: var(--fz);

  @media (min-width: 800px) {
    --fz: 3rem;
  }
}

em {
  padding: 2px;
  background-color: var(--light-pink);
  border: 1px solid #ffd3d3;
}

.code-highlight {
  padding: 2px;
  background-color: #e4e3e3;
  border: 1px solid #cacaca;
}

.header {
  max-width: 850px;
  margin: 0 auto;
  padding: 1rem;
  min-height: 100vh;

  h1 {
    --fz: 3.5rem;
    font-size: var(--fz);
    text-align: center;

    @media (min-width: 800px) {
      --fz: 6.5rem;
    }
  }

  p {
    line-height: 1.5;
  }
}

.ul-grid-icon {
  list-style-type: none;

  svg {
    margin-right: 20px;
  }
}

.section-container {
  @media (min-width: 800px) {
    padding: 0rem 4rem;
    max-width: 1280px;
    margin: 0 auto;
  }
}

.main {
  display: grid;
  grid-template-columns: 1fr minmax(300px, 1280px) 1fr;
}

section {
  grid-column: 2 / 3;
  margin: 1.5rem 1rem;
}

.code-container,
.block-container {
  margin: 3rem 0;

  @media (min-width: 750px) {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 20px;
  }
}

.two-columns {
  margin-top: 2rem;
  margin-bottom: 2rem;
  @media (min-width: 600px) {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 20px;
  }

  code.highlight {
    background-color: var(--light-pink);
  }
}

.important {
  width: fit-content;
  padding: 1rem;
  margin-bottom: 3rem;
  border: 2px solid #e8505b;
  border-radius: 10px;
}

.grid-img {
  ul {
    list-style: none;
    margin: 0;
    padding: 0;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
    grid-gap: 20px;

    li {
      border: 1px solid #eee;
    }
  }
}

.footer {
  padding: 3rem 1rem;
  text-align: center;
  background-color: #f2f2f2;

  a {
    text-decoration: none;
    color: var(--dark-pink);
    border-bottom: 1px dashed var(--dark-pink);
  }
}

